# supafi-Deep-Research

./: .env  Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
static/: index.html
